# online_store

./: pyproject.toml
src/: class_category.py  classes.py  classes_products.py  funtions.py
tests/: conftest.py  test_class_category.py  test_classes.py  test_classes_products.py  test_functions.py
