[tool.poetry]
name = "online-store"
version = "0.1.0"
description = ""
authors = ["Alexander <a.biryukov164@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
